--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,8 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
+  /* --background-start-rgb: 214, 219, 220; */
+  --background-start-rgb: 190, 211, 190;
   --background-end-rgb: 255, 255, 255;
 }
 
@@ -21,7 +22,8 @@ body {
   background: linear-gradient(
       to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
+      /* rgb(var(--background-end-rgb)) */
+      rgb(var(--background-start-rgb))
     )
     rgb(var(--background-start-rgb));
 }
